--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,13 @@
 .section-class {
   max-width: 1508px;
   max-height: 900px;
+  border: 1px solid black;
+  background-color: #F5F5F5;
 }
 
 .content {
   max-width: 1170px;
-  margin: 15px;
+  margin: 15px auto;
 }
 
 .promo {
@@ -50,15 +52,23 @@
 
 .container {
   max-width: 1170px;
-  margin: 0 auto;
+  height: 530px;
+  margin-bottom: 50px;
 }
+
 .vertical-row {
   display: flex;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .vertical-column {
-  flex: 0 1 calc(100%/3);
+  flex: 0 1 calc(100%/3-3px);
 }
+
+.vertical-column-link {
+  align-self: flex-end;
+  }
 
 .vertical-item {
   width: 370px;
@@ -104,7 +114,11 @@
 
 .space {
   color: #86878B;
-  border: #F5F5F5 solid 2px ;
+  border: #F5F5F5 solid 2px;
+  background: #FFFFFF;
 }
 
-
+.vertical-column-shadow {
+  box-shadow: 0 0 10px #86878B;
+  align-self: flex-start;
+}
